apps/fitness-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-app
  namespace: fitness-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitness-app
  template:
    metadata:
      labels:
        app: fitness-app
    spec:
      containers:
        - name: fitness-app
          image: ghcr.io/mwvjk/fitness-app:v0.0.6
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
