apps/fitness-app/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: fitness-app 
  namespace: fitness-app 
spec: 
  type: ClusterIP 
  ports: 
    - port: 80 
      targetPort: 8000 
      protocol: TCP 
      name: http 
  selector: 
    app: fitness-app
